--- a/entrada.html
+++ b/entrada.html
@@ -34,7 +34,7 @@
         </div> <!-- contenedor -->
     </header>
     
-    <h1 class="fw-300 centrar-texto">Consejos para tener una alberca en tu sin gastar demasiado</h1>
+    <h1 class="fw-300 centrar-texto">Consejos para tener una alberca en tu casa sin gastar demasiado</h1>
     <img src="img/destacada2.jpg" alt="imagen principal">
 
  <main class="contenedor seccion contenido-centrado texto-entrada">
